<resources>
    <string name="app_name">Chess4Android</string>
    <string name="daily_challenge_text">Daily Challenge</string>
    <string name="info_icon">Info icon</string>
    <string name="globe_shaped_chess_board">Globe shaped chess board</string>
    <string name="chess4android_was_developed_by_pdm_s_g15_in_2122i">Chess4Android was developed by: PDM\'s G15 in 2122i</string>
    <string name="daily_fun_powered_by_lichess">Daily fun powered by Lichess:</string>
    <string name="back">Back</string>
    <string name="lichess_logo">Lichess logo</string>
    <string name="white_turn">White</string>
    <string name="white_won">White won</string>
    <string name="black_won">Black won</string>
    <string name="black_turn">Black</string>
    <string name="error_message">Sorry, Lichess is currently unreachable, but you can play normally.</string>
    <string name="puzzle_date">Puzzle Date</string>
    <string name="solve">Solve</string>
    <string name="reveal_solution">Reveal Solution</string>
    <string name="moves">Moves:</string>
    <string name="resolved_puzzle">Resolved puzzle</string>
    <string name="unsolved_puzzle">Unsolved puzzle</string>
    <string name="history_icon">History icon</string>
    <string name="restart_game">You want restart the game?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="impossible_move">Impossible show the challenge because the game is not finish</string>
    <string name="end_game">This is the solution of daily challenge</string>
    <string name="solved">Solved</string>
    <string name="unsolved">Unsolved</string>
    <string name="multiplayer">1vs1</string>
    <string name="one_vs_one">1vs1</string>
    <string name="online_mode">Online</string>
    <string name="restart">Restart?</string>
    <string name="waiting_for_opponent_to_join">waiting for opponent to join</string>
    <string name="lobby">Lobby</string>
    <string name="new_">New</string>
    <string name="create_lobby">Create Lobby</string>
    <string name="name_lobby">Write lobby name here</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
</resources>